Implemented HealthKit Access Upon Entering Mobile Clinic

--- a/HelloWorldCK/HelloWorldCK.entitlements
+++ b/HelloWorldCK/HelloWorldCK.entitlements
@@ -4,6 +4,8 @@
 <dict>
 	<key>com.apple.developer.default-data-protection</key>
 	<string>NSFileProtectionComplete</string>
+	<key>com.apple.developer.healthkit</key>
+	<true/>
 	<key>com.apple.developer.in-app-payments</key>
 	<array>
 		<string>merchant.com.Intellect.stripe</string>
